new: username and unique fields
