# app/models/user_model.go
@@ -12,6 +12,7 @@ type User struct {
 	CreatedAt    time.Time `db:"created_at" json:"created_at"`
 	UpdatedAt    time.Time `db:"updated_at" json:"updated_at"`
 	Email        string    `db:"email" json:"email" validate:"required,email,lte=255"`
+	Username     string    `db:"username" json:"username" validate:"required,lte=15"`
 	PasswordHash string    `db:"password_hash" json:"password_hash,omitempty" validate:"required,lte=255"`
 	UserStatus   int       `db:"user_status" json:"user_status" validate:"required,len=1"`
 }
